# TeodorSynth3001

./: CMakeLists.txt  README.md
resource/: TS3K1_editor.uidesc
source/: TS3K1_cids.h  TS3K1_controller.cpp  TS3K1_controller.h  TS3K1_entry.cpp  TS3K1_processor.cpp  TS3K1_processor.h  baseController.cpp  baseProcessor.cpp  common.hpp  dsp.hpp  myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  note_processor.hpp  params.h  version.h
